chore: sync changes

--- a/the-doozers-inn/linux/doozer-buildah.hm.yml
+++ b/the-doozers-inn/linux/doozer-buildah.hm.yml
@@ -1,6 +1,6 @@
-#BUILD files=/(configure|Makefile)/
+#BUILD files=/Containerfile/
 ---
-name: Builder-Configure-Make
+name: Doozer-Buildah
 
 true:
   workflow_dispatch:
@@ -37,14 +37,16 @@ jobs:
         set -euo pipefail
         find "$HARBOUR"/hooks/10-pre-build.d hooks/10-pre-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null || true
 
-    - name: configure && make
+    - name: buildah bud
       run: |
         set -euo pipefail
-        pushd "${{ inputs.pipeline }}" >/dev/null
-        chmod +x ./configure || true
-        ./configure
-        make -j"$(nproc)"
-        popd >/dev/null
+        PIPELINE="${{ inputs.pipeline }}"
+        IMAGE_TAG="${IMAGE_TAG:-${GITHUB_REF_NAME}}"
+        REGISTRY="${REGISTRY:-}"
+        IMAGE_PATH="${IMAGE_PATH:-$(basename "$(dirname "$PIPELINE")")/$(basename "$PIPELINE")}"
+        ref="${REGISTRY:+$REGISTRY/}${IMAGE_PATH}:$IMAGE_TAG"
+        buildah bud -t "$ref" -f "$PIPELINE/Containerfile" "$PIPELINE"
+        echo "IMAGE_REF=$ref" >> "$GITHUB_OUTPUT"
 
     - name: Post-build hooks
       working-directory: "${{ inputs.pipeline }}"
@@ -65,4 +67,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
