--- a/the-doozers-inn/linux/doozer-docker.hm.yml
+++ b/the-doozers-inn/linux/doozer-docker.hm.yml
@@ -1,6 +1,6 @@
-#BUILD files=/mise\.toml/
+#BUILD files=/Dockerfile/
 ---
-name: Builder-Mise
+name: Doozer-Docker
 
 on:
   workflow_dispatch:
@@ -12,8 +12,6 @@ on:
       runner:
         required: false
       env:
-        required: false
-      task:
         required: false
 
 jobs:
@@ -39,15 +37,17 @@ jobs:
         set -euo pipefail
         find "$HARBOUR"/hooks/10-pre-build.d hooks/10-pre-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null || true
 
-    - name: mise run
+    - name: Build image
+      id: build
       run: |
         set -euo pipefail
-        task="${{ inputs.task }}"
-        if [[ -n "$task" ]]; then
-          mise run -C "${{ inputs.pipeline }}" "$task"
-        else
-          mise run -C "${{ inputs.pipeline }}" build
-        fi
+        PIPELINE="${{ inputs.pipeline }}"
+        IMAGE_TAG="${IMAGE_TAG:-${GITHUB_REF_NAME}}"
+        REGISTRY="${REGISTRY:-}"
+        IMAGE_PATH="${IMAGE_PATH:-$(basename "$(dirname "$PIPELINE")")/$(basename "$PIPELINE")}"
+        ref="${REGISTRY:+$REGISTRY/}${IMAGE_PATH}:$IMAGE_TAG"
+        docker build -t "$ref" "$PIPELINE"
+        echo "IMAGE_REF=$ref" >> "$GITHUB_OUTPUT"
 
     - name: Post-build hooks
       working-directory: "${{ inputs.pipeline }}"
