--- a/the-doozers-inn/linux/doozer-maven.hm.yml
+++ b/the-doozers-inn/linux/doozer-maven.hm.yml
@@ -1,8 +1,8 @@
-#BUILD files=/(Gemfile|gems\.rb)/
+#BUILD files=/pom\.xml/
 ---
-name: Builder-Ruby
+name: Doozer-Maven
 
-on:
+true:
   workflow_dispatch:
     inputs:
       pipeline:
@@ -29,7 +29,7 @@ jobs:
         env_json: "${{ inputs.env_json }}"
       run: |
         set -euo pipefail
-        echo "$env_json" | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
+        echo "$env_json" | jq -r ''to_entries[]|"\(.key)=\(.value)"'' >> "$GITHUB_ENV"
 
     - name: Pre-build hooks
       working-directory: "${{ inputs.pipeline }}"
@@ -37,18 +37,21 @@ jobs:
         set -euo pipefail
         find "$HARBOUR"/hooks/10-pre-build.d hooks/10-pre-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null || true
 
-    - name: bundle install
-      working-directory: "${{ inputs.pipeline }}"
+    - name: mvn validate
       run: |
         set -euo pipefail
-        bundle install --jobs 4 --retry 3
+        mvn -f "${{ inputs.pipeline }}/pom.xml" -B -U -ntp -q validate
 
-    - name: bundle exec rake test
-      if: env.BUILD_TEST_SKIP != 'true'
-      working-directory: "${{ inputs.pipeline }}"
+    - name: mvn package
       run: |
         set -euo pipefail
-        bundle exec rake test || true
+        mvn -f "${{ inputs.pipeline }}/pom.xml" -B -U -ntp package
+
+    - name: mvn test
+      if: env.BUILD_TEST_SKIP != 'true'
+      run: |
+        set -euo pipefail
+        mvn -f "${{ inputs.pipeline }}/pom.xml" -B -U -ntp -DskipTests=false test
 
     - name: Post-build hooks
       working-directory: "${{ inputs.pipeline }}"
@@ -69,4 +72,3 @@ jobs:
         pipeline: "${{ inputs.pipeline }}"
         ref: "${{ inputs.ref }}"
         env_json: "${{ env.env_json }}"
-
