Rename lighthouse-keeper to lighthouse 💘 Generated with Crush\nCo-Authored-By: Crush <crush@charm.land>

--- a/the-lighthouse-inn/lighthouse.hm.yml
+++ b/the-lighthouse-inn/lighthouse.hm.yml
@@ -1,5 +1,5 @@
 ### Schedule
-This workflow is schedules the lighthouse keeper to be run every 20 min
+# This workflow is schedules the lighthouse keeper to be run every 20 min
 on:
   schedule:
     # Run every 20 minutes
@@ -42,4 +42,4 @@ jobs:
       - name: Run Lighthouse Keeper
         run: |
           cd /home/keith/devops-cove/the-github-taverns/the-lighthouse-inn/
-          ./lighthouse-keeper.sh
+          ./lighthouse.sh
