Restore lighthouse.hm.yml to intended prior result before my changes 💘 Generated with Crush\nCo-Authored-By: Crush <crush@charm.land>

--- a/the-lighthouse-inn/lighthouse.hm.yml
+++ b/the-lighthouse-inn/lighthouse.hm.yml
@@ -11,34 +11,9 @@ jobs:
   run-lighthouse:
     runs-on: ubuntu-latest
     steps:
-      - name: Generic install and tool setup + caching
-        id: install-and-cache-tools
-        shell: bash
-        run: |
-          # set -x # for debugging
-          #check out the latest source
-          git pull origin
-          # Determine cache key and path
-          MISE_CACHE_KEY=$(echo "$(cat mise.toml)" | sha256sum | awk '{print $1}')
-          MISE_CACHE_PATH="$HOME/.local/share/mise"
-          echo "MISE_CACHE_KEY: $MISE_CACHE_KEY"
-          echo "MISE_CACHE_PATH: $MISE_CACHE_PATH"
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-          # Restore cache, or install if no cache hit
-          echo "Restoring mise cache..."
-          if  [[ -n "${{ github.actions.cache.restoreByKey(key: MISE_CACHE_KEY, path: MISE_CACHE_PATH) }}" ]]; then
-            echo "Cache restored."
-          else
-            echo "Cache not found, installing mise..."
-            curl -fsSL https://mise.jdx.gg/install.sh | sh
-          fi
-              
-          # Add mise to path, and install tools
-          echo "$HOME/.local/share/mise/bin" >> $GITHUB_PATH
-          mise --version
-          mise tools install -y
-          mise tools use -g
-  
       - name: Run Lighthouse
         run: |
           cd /home/keith/devops-cove/the-github-taverns/the-lighthouse-inn/
